# pflows

./: .gitignore  CMakeLists.txt  README.md
Demo/: CMakeLists.txt
Demo/Compare2Dand3Dunsteady/: CMakeLists.txt  Compare2Dand3Dunsteady.sln
Demo/Compare2Dand3Dunsteady/Compare2Dand3Dunsteady/: Compare2Dand3Dunsteady.cpp  Compare2Dand3Dunsteady.vcxproj  Compare2Dand3Dunsteady.vcxproj.filters  stdafx.cpp
Demo/Guermond1990_demo/: CMakeLists.txt
Demo/Guermond1990_demo/Guermond1990_demo/: Guermond1990_demo.cpp
Demo/PlanarWakeULLT/: CMakeLists.txt
Demo/PlanarWakeULLT/PlanarWakeULLT/: PlanarWakeULLT.cpp
Demo/PlanarWakeULLT_demo/: CMakeLists.txt
Demo/PlanarWakeULLT_demo/PlanarWakeULLT_demo/: PlanarWakeULLT_demo.cpp
Demo/PrandtlLiftingLine_demo/: CMakeLists.txt
Demo/PrandtlLiftingLine_demo/PrandtlLiftingLine_demo/: PrandtlLiftingLine_demo.cpp
Demo/Ramesh2014/: Ramesh2014.cpp  Ramesh2014.sln  Ramesh2014.vcxproj  Ramesh2014.vcxproj.filters  Ramesh2014_Demo.cpp  stdafx.cpp
Demo/Ramesh2014_demo/: CMakeLists.txt  Ramesh2014_Demo.cpp
Demo/Ramesh2014_demo/Ramesh2014_demo/: Ramesh2014_demo.cpp
Demo/Sclavounos1987/: CMakeLists.txt
Demo/Sclavounos1987/Sclavounos1987/: Sclavounos1987.cpp  Sclavounos1987.sln  Sclavounos1987.vcxproj  Sclavounos1987.vcxproj.filters  stdafx.cpp
Demo/ThreeDWakeULLT_demo/: CMakeLists.txt
Demo/ThreeDWakeULLT_demo/ThreeDWakeULLT_demo/: ThreeDWakeULLT_demo.cpp
Demo/VortexParticles_demo/: CMakeLists.txt
Demo/VortexParticles_demo/VortexParticles_demo/: VortexParticles_demo.cpp
Demo/Yan2014/: CMakeLists.txt
Demo/Yan2014/Yan2014/: Yan2014.cpp  Yan2014.sln  Yan2014.vcxproj  Yan2014.vcxproj.filters  stdafx.cpp
mFlow/: Guermond1991.cpp  Guermond1991.h  ThinFoil.h  WingProjectionGeometry.cpp  WingProjectionGeometry.h  mFlow.vcxproj  mFlow.vcxproj.filters  stdafx.cpp
pFlow/: Common.cpp  Common.h  Guermond1990.cpp  Guermond1991.cpp  Guermond1991.h  LargeAmplitudeLiftingLineTheory.cpp  McGowan2011.cpp  McGowan2011.h  Plotting.cpp  Plotting.h  Ramesh2014.cpp  Ramesh2014.h  Sclavounos1987.cpp  Sclavounos1987.h  ThinFoil.h  WingGenerators.cpp  WingGenerators.h  WingProjectionGeometry.cpp  WingProjectionGeometry.h  Yan2014.cpp  Yan2014.h  mFlow.sln  mFlow.vcxproj  mFlow.vcxproj.filters
pFlows/: CMakeLists.txt
pFlows/include/pFlows/: AbstractVortexObject.h  CanonicalFunctions.h  CanonicalFuntions.cpp  CanonicalFuntions.h  Guermond1990.h  LargeAmplitudeLiftingLineTheory.h  LevSheddingULLT.h  PlanarVortexRingLattice.cpp  PlanarVortexRingLattice.h  PlanarWakeULLT.h  Plotting.h  PrandtlLiftingLine.h  Ramesh2014.h  ThinFoil.h  ThreeDWakeULLT.h  VortexGroup2D.h  VortexParticle3D.h  VortexParticle3DCollector.h  VortexParticleKernels.h  VortexRingLattice.h  WingProjectionGeometry.h  Yan2014.h
pFlows/src/: CanonicalFunctions.cpp  Common.cpp  Guermond1990.cpp  Guermond1991.cpp  LargeAmplitudeLiftingLineTheory.cpp  LevSheddingULLT.cpp  McGowan2011.cpp  PlanarVortexRingLattice.cpp  PlanarWakeULLT.cpp  Plotting.cpp  PrandtlLiftingLine.cpp  Ramesh2014.cpp  Sclavounos1987.cpp  ThreeDWakeULLT.cpp  VortexGroup2D.cpp  VortexParticle3D.cpp  VortexParticle3DCollector.cpp  VortexParticleKernels.cpp  VortexRingLattice.cpp  WingGenerators.cpp  WingProjectionGeometry.cpp  Yan2014.cpp
