cmake_minimum_required(VERSION 3.1)

add_subdirectory(Sclavounos1987)
add_subdirectory(Compare2Dand3Dunsteady)
add_subdirectory(PlanarWakeULLT_demo)
add_subdirectory(ThreeDWakeULLT_demo)
add_subdirectory(Ramesh2014_demo)
add_subdirectory(Yan2014)
add_subdirectory(Guermond1990_demo)
add_subdirectory(PrandtlLiftingLine_demo)
add_subdirectory(VortexParticles_demo)
